--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
       "./build/**/*"
    ],
    "scripts": {
-      "clean": "del ./build/*",
-      "build": "npm run clean && tsc"
+      "clean": "del-cli ./build/*",
+      "build": "npm run clean && tsc",
+      "pub": "git add . && git commit -m \"Updates\" && npm version patch && npm run build && npm publish"
    },
    "keywords": [],
    "author": "",
