--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
    "name": "@yovelsapir-sgtickets/common",
-   "version": "1.0.4",
+   "version": "1.0.7",
    "description": "",
    "main": "./build/index.js",
    "types": "./build/index.d.ts",
@@ -8,7 +8,7 @@
       "./build/**/*"
    ],
    "scripts": {
-      "clean": "del-cli ./build/*",
+      "clean": "del ./build/*",
       "build": "npm run clean && tsc",
       "pub": "git add . && git commit -m \"Updates\" && npm version patch && npm run build && npm publish"
    },
@@ -16,16 +16,16 @@
    "author": "",
    "license": "ISC",
    "devDependencies": {
-      "del-cli": "^3.0.1",
-      "typescript": "^3.9.5"
+      "del-cli": "^3.0.0",
+      "typescript": "^3.8.3"
    },
    "dependencies": {
-      "@types/cookie-session": "^2.0.40",
-      "@types/express": "^4.17.6",
-      "@types/jsonwebtoken": "^8.5.0",
+      "@types/cookie-session": "^2.0.39",
+      "@types/express": "^4.17.5",
+      "@types/jsonwebtoken": "^8.3.9",
       "cookie-session": "^1.4.0",
       "express": "^4.17.1",
-      "express-validator": "^6.5.0",
+      "express-validator": "^6.4.0",
       "jsonwebtoken": "^8.5.1"
    }
 }
