--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
    ],
    "scripts": {
       "clean": "del-cli ./build/*",
-      "build": "npm run clean && tsc",
+      "build": "tsc",
       "pub": "git add . && git commit -m \"Updates\" && npm version patch && npm run build && npm publish"
    },
    "keywords": [],
