--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
    "name": "@yovelsapir-sgtickets/common",
-   "version": "1.0.13",
+   "version": "1.0.12",
    "description": "",
    "main": "./build/index.js",
    "types": "./build/index.d.ts",
    "files": [
-      "./build/**/*"
+      "./build/*"
    ],
    "scripts": {
       "clean": "del-cli ./build/*",
-      "build": "tsc",
+      "build": "npm run clean && tsc",
       "pub": "git add . && git commit -m \"Updates\" && npm version patch && npm run build && npm publish"
    },
    "keywords": [],
