--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
    "name": "@yovelsapir-sgtickets/common",
-   "version": "1.0.13",
+   "version": "1.0.12",
    "description": "",
    "main": "./build/index.js",
    "types": "./build/index.d.ts",
    "files": [
-      "./build/*"
+      "./build/**/*"
    ],
    "scripts": {
       "clean": "del-cli ./build/*",
